plex/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      containers:
      - name: plex
        image: ghcr.io/linuxserver/plex
        imagePullPolicy: IfNotPresent
        ports:
        - name: pms
          containerPort: 32400
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 10
          timeoutSeconds: 10
        resources:
          requests:
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /movies
          name: media
          subPath: Movies
        - mountPath: /movies_sync
          name: media-sync
          subPath: movies
        - mountPath: /tv
          name: media
          subPath: TV
        - mountPath: /tv_sync
          name: media-sync
          subPath: tv
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: media
        persistentVolumeClaim:
          claimName: media-share
      - name: media-sync
        persistentVolumeClaim:
          claimName: media-share-sync
