plex/base/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  labels:
    app.kubernetes.io/name: plex
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: pms
    nodePort: 32400
  type: LoadBalancer
  loadBalancerIP: 10.1.1.49
