plex/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: pms
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  labels:
    app.kubernetes.io/name: plex
  annotations:
    lbipam.cilium.io/ips: "10.1.1.53"
    lbipam.cilium.io/sharing-key: db3000-lb
spec:
  selector:
    app.kubernetes.io/name: plex
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: pms
    nodePort: 32400
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
