plex/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - plex.xmple.io
  rules:
    - backendRefs:
        - name: plex
          port: 32400
          kind: Service
